# Housing-Approval-Forecaster

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
data/: __init__.py  download.py  pipeline.py
models/: __init__.py  baseline.py  lstm.py  registry.py
monitoring/: __init__.py  drift.py  report.py
notebooks/: 01_eda.ipynb  02_drift_case_study.ipynb  03_project_showcase.ipynb
serving/: __init__.py  app.py  forecaster.py  logger.py
tests/: __init__.py  test_api.py  test_baseline.py  test_drift.py  test_logger.py  test_lstm.py  test_pipeline.py
training/: __init__.py  compare.py  train_baseline.py  train_lstm.py
