[project]
name = "housing-approvals-forecaster"
version = "0.1.0"
description = "PyTorch LSTM forecaster for Australian dwelling approvals with MLflow tracking, FastAPI serving, and drift monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "mlflow>=2.12",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "matplotlib>=3.8",
    "sqlite-utils>=3.39",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
